--- a/charts/background-worker/templates/cassandra-secret.yaml
+++ b/charts/background-worker/templates/cassandra-secret.yaml
@@ -1,9 +1,9 @@
-{{/* Secret for the provided Cassandra TLS CA. */}}
+{{/* Secrets for provided Cassandra TLS CAs */}}
 {{- if not (empty .Values.config.cassandra.tlsCa) }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: background-worker-cassandra
+  name: background-worker-cassandra-gundeck
   labels:
     app: background-worker
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -12,4 +12,34 @@ metadata:
 type: Opaque
 data:
   ca.pem: {{ .Values.config.cassandra.tlsCa | b64enc | quote }}
+{{- end }}
+{{- if not (empty .Values.config.cassandraBrig.tlsCa) }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: background-worker-cassandra-brig
+  labels:
+    app: background-worker
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+type: Opaque
+data:
+  ca.pem: {{ .Values.config.cassandraBrig.tlsCa | b64enc | quote }}
+{{- end }}
+{{- if and .Values.config.cassandraGalley (not (empty .Values.config.cassandraGalley.tlsCa)) }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: background-worker-cassandra-galley
+  labels:
+    app: background-worker
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+type: Opaque
+data:
+  ca.pem: {{ .Values.config.cassandraGalley.tlsCa | b64enc | quote }}
 {{- end }}
