--- a/charts/integration/templates/configmap.yaml
+++ b/charts/integration/templates/configmap.yaml
@@ -56,6 +56,11 @@ data:
     backgroundWorker:
       host: backgroundWorker.{{ .Release.Namespace }}.svc.cluster.local
       port: 8080
+      # Background jobs defaults for integration tests
+      backgroundJobs:
+        concurrency: 4
+        jobTimeout: 5
+        maxAttempts: 3
 
     stern:
       host: stern.{{ .Release.Namespace }}.svc.cluster.local
