--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -120,6 +120,7 @@ common common-all
     , hspec
     , html-entities
     , http-client
+    , http-client-openssl
     , http-types
     , http2-manager
     , imports
