brig-index: Log JSONs

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -341,6 +341,7 @@ executable brig-index
   build-depends:
     , base
     , brig
+    , extended
     , imports
     , optparse-applicative
     , tinylog
