--- a/hack/helm_vars/redis-ephemeral/values.yaml
+++ b/hack/helm_vars/redis-ephemeral/values.yaml
@@ -4,6 +4,9 @@ redis-ephemeral:
     repository: docker/library/redis
 
   redisConfig: |
+    requirepass very-secure-redis-master-password
+
+    # ephemeral
     save ""
 
     port 0
