Add comment to .envrc

--- a/.envrc
+++ b/.envrc
@@ -76,5 +76,11 @@ export TEST_TIMEOUT_SECONDS=2
 # OTEL
 OTEL_SEMCONV_STABILITY_OPT_IN=http
 
+# uncomment if you plan to run the integration setup manually against kube-ci
+# unset AWS_REGION
+# unset AWS_ACCESS_KEY_ID
+# unset AWS_SECRET_ACCESS_KEY
+# source_env ../cailleach/.envrc
+
 # allow local .envrc overrides
 [[ -f .envrc.local ]] && source_env .envrc.local
