renamed domain to federationDomain to match infra code

--- a/charts/background-worker/templates/configmap.yaml
+++ b/charts/background-worker/templates/configmap.yaml
@@ -65,7 +65,7 @@ data:
     postgresqlPassword: /etc/wire/background-worker/secrets/pgPassword
     {{- end }}
 
-    domain: {{ .domain }}
+    federationDomain: {{ .federationDomain }}
 
     {{- with .rabbitmq }}
     rabbitmq:
