Extract MLS client check

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -91,6 +91,7 @@ library
     Galley.API.Mapping
     Galley.API.Message
     Galley.API.MLS
+    Galley.API.MLS.CheckClients
     Galley.API.MLS.Commit
     Galley.API.MLS.Commit.Core
     Galley.API.MLS.Commit.ExternalCommit
