fix: federation support

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -203,6 +203,9 @@ library
     Wire.AWS
     Wire.AWSSubsystem
     Wire.AWSSubsystem.AWS
+    Wire.BackendNotificationSubsystem
+    Wire.BackendNotificationSubsystem.InMemory
+    Wire.BackendNotificationSubsystem.RabbitMQ
     Wire.BlockListStore
     Wire.BlockListStore.Cassandra
     Wire.BrigAPIAccess
