--- a/charts/redis-ephemeral/Chart.yaml
+++ b/charts/redis-ephemeral/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: Wrapper chart for stable/redis
+description: Wrapper chart for https://github.com/groundhog2k/helm-charts/tree/redis-1.3.8/charts/redis
 name: redis-ephemeral
 version: 0.0.42
