--- a/charts/redis-ephemeral/requirements.yaml
+++ b/charts/redis-ephemeral/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: redis
-  version: 19.6.4 # redis 7.2.5
-  repository: oci://registry-1.docker.io/bitnamicharts
+  version: 1.3.8
+  repository: https://groundhog2k.github.io/helm-charts/
   alias: redis-ephemeral
