--- a/charts/redis-ephemeral/values.yaml
+++ b/charts/redis-ephemeral/values.yaml
@@ -1,19 +1,60 @@
 redis-ephemeral:
   image:
-    registry: docker.io
-    repository: bitnamilegacy/redis
-    tag: 7.2.5
-  # We use a single node redis for now.
-  architecture: standalone
-  auth:
+    tag: "7.4.6"
+
+  haMode:
     enabled: false
-  master:
-    persistence:
-      enabled: false
-    resources:
-      limits:
-        cpu: "1000m"
-        memory: "1024Mi"
-      requests:
-        cpu: "500m"
-        memory: "512Mi"
+
+  redisConfig: |
+    # dont write rdb to emptyDir disk for an ephemeral setup
+    save ""
+
+# To add a password add the following to redisConfig:
+# requirepass my-plaintext-password
+
+
+# How to enable SSL connections:
+#
+# Add the following lines to redisConfig:
+# 
+# port 0
+# tls-port 6379
+# tls-cert-file /data/ssl/tls.crt
+# tls-key-file /data/ssl/tls.key
+# tls-ca-cert-file /data/ssl/ca.crt
+# tls-auth-clients no
+#
+# Mount the certificate and adjust probes to use SSL
+#
+# redis-ephemeral:
+#  extraRedisSecrets:
+#    - name: redis-certificate
+#      mountPath: /data/ssl
+#
+#  livenessProbe:
+#    enabled: false
+#  customLivenessProbe:
+#    exec:
+#      command:
+#        - sh
+#        - -c
+#        - redis-cli --tls --cacert /data/ssl/ca.crt ping
+#
+#  readinessProbe:
+#    enabled: false
+#  customReadinessProbe:
+#    exec:
+#      command:
+#        - sh
+#        - -c
+#        - redis-cli --tls --cacert /data/ssl/ca.crt ping
+#
+#  startupProbe:
+#    enabled: false
+#  customStartupProbe:
+#    exec:
+#      command:
+#        - sh
+#        - -c
+#        - redis-cli --tls --cacert /data/ssl/ca.crt ping
+#
