--- a/charts/background-worker/templates/configmap.yaml
+++ b/charts/background-worker/templates/configmap.yaml
@@ -34,6 +34,9 @@ data:
         host: {{ .cassandra.host }}
         port: 9042
       keyspace: gundeck
+      {{- if hasKey .cassandra "filterNodesByDatacentre" }}
+      filterNodesByDatacentre: {{ .cassandra.filterNodesByDatacentre }}
+      {{- end }}
       {{- if eq (include "useGundeckCassandraTLS" .) "true" }}
       tlsCa: /etc/wire/background-worker/cassandra-gundeck/{{- (include "gundeckTlsSecretRef" . | fromYaml).key }}
       {{- end }}
@@ -43,6 +46,9 @@ data:
         host: {{ .cassandraBrig.host }}
         port: 9042
       keyspace: brig
+      {{- if hasKey .cassandraBrig "filterNodesByDatacentre" }}
+      filterNodesByDatacentre: {{ .cassandraBrig.filterNodesByDatacentre }}
+      {{- end }}
       {{- if eq (include "useBrigCassandraTLS" .) "true" }}
       tlsCa: /etc/wire/background-worker/cassandra-brig/{{- (include "brigTlsSecretRef" . | fromYaml).key }}
       {{- end }}
