--- a/.headroom.yaml
+++ b/.headroom.yaml
@@ -1,32 +1,31 @@
+version: 0.4.0.0
 run-mode: replace
 source-paths:
-- libs
-- services
-- tools
-excluded-paths:
-- '\.stack-work'
-- '\.stack-docker'
+  - libs
+  - services
+  - tools
+  - integration
 template-paths:
-- tools/headroom-templates
+  - tools/headroom-templates
 variables:
   organization: Wire Swiss GmbH
   email: opensource@wire.com
   project: This file is part of the Wire Server implementation.
-  year: '2022'
+  year: "2025"
 license-headers:
   haskell:
     file-extensions: ["hs", "hsc"]
     # after pragmas, to make Ormolu happy
     put-after: ["^{-#"]
     # but before the module header (or comment) in any case
-    put-before: ["^module", "^-- \\|"]
-    margin-after: 1
-    margin-before: 1
+    put-before: ["^-- \\|", "--", "^module"]
+    margin-bottom-code: 1
+    margin-top-code: 1
     line-comment:
       prefixed-by: "--"
   rust:
     file-extensions: ["rs"]
-    margin-after: 1
-    margin-before: 1
+    margin-bottom-code: 1
+    margin-top-code: 1
     line-comment:
       prefixed-by: "//"
