--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -108,6 +108,7 @@ library
     , metrics-wai                           >=0.4
     , mwc-random                            >=0.13
     , prometheus-client
+    , pulsar-client-hs
     , retry                                 >=0.7
     , safe-exceptions
     , servant-conduit
