--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -149,6 +149,7 @@ library
     , network-uri                           >=2.6
     , prometheus-client
     , psqueues                              >=0.2.2
+    , pulsar-client-hs
     , raw-strings-qq
     , resourcet                             >=1.1
     , retry                                 >=0.5
