Add headroom exclusion rule
Exclude wire-server-enterprise as it should have a proprietary license.

--- a/.headroom.yaml
+++ b/.headroom.yaml
@@ -5,6 +5,8 @@ source-paths:
   - services
   - tools
   - integration
+excluded-paths:
+  - services/wire-server-enterprise
 template-paths:
   - tools/headroom-templates
 variables:
