Polish ScimSubsystem errors.

--- a/libs/wire-subsystems/wire-subsystems.cabal
+++ b/libs/wire-subsystems/wire-subsystems.cabal
@@ -292,6 +292,7 @@ library
     Wire.RateLimit.Interpreter
     Wire.Rpc
     Wire.ScimSubsystem
+    Wire.ScimSubsystem.Error
     Wire.ScimSubsystem.Interpreter
     Wire.ServiceStore
     Wire.ServiceStore.Cassandra
