Propagate api version information to mls endpoints

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -133,6 +133,7 @@ library
     Wire.API.MLS.LeafNode
     Wire.API.MLS.Lifetime
     Wire.API.MLS.Message
+    Wire.API.MLS.OutOfSync
     Wire.API.MLS.Proposal
     Wire.API.MLS.ProposalTag
     Wire.API.MLS.ProtocolVersion
