moved the rest of team store to subsystems

--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -230,6 +230,7 @@ library
     Wire.API.Team.Conversation
     Wire.API.Team.Export
     Wire.API.Team.Feature
+    Wire.API.Team.Feature.Defaults
     Wire.API.Team.Feature.Profunctor
     Wire.API.Team.Feature.TH
     Wire.API.Team.HardTruncationLimit
